# Firmware

./: CMakeLists.txt
CMSIS/Include/: gd32f10x.h
CMSIS/Source/gcc_startup/: startup_gd32f10x_md.S
ldscripts/: gd32f10x_flash.ld
standard_peripheral/Include/: gd32f10x_enet.h
standard_peripheral/Source/: gd32f10x_it.c  gd32f10x_systick.c
